# ARES_simulation_master

./: COMMUNICATION.md  README.md  说明书.md
docs/: cmd_vel_frame.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ares_bringup/share/ares_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml
install/ares_bringup/share/ares_bringup/cmake/: ares_bringupConfig-version.cmake  ares_bringupConfig.cmake
install/ares_bringup/share/ares_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/ares_bringup/share/ares_bringup/launch/: bringup.launch.py
install/ares_comm/include/ares_comm/: crc.hpp  protocol_parser.hpp  serial_interface.hpp
install/ares_comm/lib/ares_comm/: ares_comm_node  imu_sensor_node
install/ares_comm/share/ares_comm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml
install/ares_comm/share/ares_comm/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  ares_commConfig-version.cmake  ares_commConfig.cmake  ares_comm__rosidl_typesupport_introspection_cExport-noconfig.cmake  ares_comm__rosidl_typesupport_introspection_cppExport.cmake  export_ares_comm__rosidl_generator_cExport-noconfig.cmake  export_ares_comm__rosidl_generator_cppExport.cmake  export_ares_comm__rosidl_generator_pyExport.cmake  export_ares_comm_libExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/ares_comm/share/ares_comm/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/ares_comm/share/ares_comm/msg/: Data.idl  Data.msg  (+2 more)
install/laser/share/laser/: package.sh  package.xml
install/lidar_avoidance/lib/lidar_avoidance/: lidar_avoidance
install/lidar_avoidance/share/lidar_avoidance/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/myrobot_controller/lib/myrobot_controller/: simple_controller  simple_controller.py
install/myrobot_controller/share/myrobot_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/new_teleotwistkeyboard/lib/new_teleotwistkeyboard/: ares_keyboard
install/new_teleotwistkeyboard/share/new_teleotwistkeyboard/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/omni_mpc_controller/share/omni_mpc_controller/: package.sh  package.xml
install/simulation_bringup/share/simulation_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/test_serial/lib/test_serial/: test_frame  test_serial
install/test_serial/share/test_serial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/visualizer/lib/visualizer/: trajectory_visualizer
install/visualizer/share/visualizer/: package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
src/ares_bringup/: CMakeLists.txt
src/ares_comm/: CMakeLists.txt
src/ares_comm/ARES_bulk_library/: CMakeLists.txt  ares_protocol.cpp  example.cpp
src/install/: local_setup.sh  setup.sh
src/install/omni_mpc_controller/share/omni_mpc_controller/: package.dsv  package.ps1  package.sh  package.xml
src/laser/laser/: Real.py  laser.py
src/lidar_avoidance/: setup.py
src/lidar_avoidance/lidar_avoidance/: avoidance.py
src/log/: latest_build
src/my_robot_description/urdf/: my_robot.urdf.xacro
src/new_teleotwistkeyboard/: package.xml  setup.cfg  setup.py
src/omni_mpc_controller/: omni_mpc_controller_node.py
src/omni_mpc_controller/test/: MPC_2.0.py
src/simulation_bringup/: CMakeLists.txt  package.xml
src/simulation_bringup/launch/: my_robot.launch.py
src/test_serial/: CMakeLists.txt
src/test_serial/src/: test_frame.cpp  test_serial.cpp
src/visualizer/: setup.py
(+248 files in other folders)
